2005-09-22  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(paintChildren): If a child component is invisible, skip it.
	Handle the (rare) case when no clip is set as if it's set to the
	child component's bounds. These fixes should make Swing working
	again as before.

2005-09-22  Andreas Tobler  <a.tobler@schweiz.ch>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkWindowPeer_gtkWindowSetResizable):
	Replace deprecated gtk_window_set_policy with gtk_window_set_resizable.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkMenuPeer_delItem): Replace deprecated
	gtk_container_children with gtk_container_get_children.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuBarPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkMenuBarPeer_nativeSetHelpMenu): Likewise.
	(Java_gnu_java_awt_peer_gtk_GtkMenuBarPeer_delMenu): Likewise.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkImage.c
	(Java_gnu_java_awt_peer_gtk_GtkImage_freePixmap): Replace deprecated
	gdk_pixmap_unref with g_object_unref.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkComponentPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkComponentPeer_gtkWidgetSetCursorUnlocked):
	Replace deprecated gdk_cursor_destroy with gdk_cursor_unref.
	(Java_gnu_java_awt_peer_gtk_GtkComponentPeer_gtkWidgetSetParent):
	Replace deprecated gtk_container_children with
	gtk_container_get_children.
	(find_fg_color_widget): Replace deprecated macro GTK_IS_OPTION_MENU with
	GTK_IS_COMBO_BOX.
	(component_button_release_cb): Replace deprecated gdk_window_get_size
	with gdk_drawable_get_size.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkCheckboxPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkCheckboxPeer_nativeSetCheckboxGroup):
	Replace deprecated gtk_radio_button_group with
	gtk_radio_button_get_group.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkCheckboxGroupPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkCheckboxGroupPeer_remove): Likewise.
