@@ -1,5 +1,13 @@
 2005-09-22  Roman Kennke  <kennke@aicas.com>
 
+	* javax/swing/UIManager.java
+	(static_initializer): Load MetalLookAndFeel only as fallback, if
+	the system property 'swing.defaultlaf' is not defined. Before
+	it has accidentally loaded the MetalLookAndFeel in all cases,
+	regardless of the property setting.
+
+2005-09-22  Roman Kennke  <kennke@aicas.com>
+
 	* javax/swing/JComponent.java
 	(paintChildren): If a child component is invisible, skip it.
 	Handle the (rare) case when no clip is set as if it's set to the
